--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -1665,6 +1665,7 @@
       for (let i = 1; i < mCount; i++) {
         const name = measurements[i].title;
         if (name.startsWith("SW")) {
+          console.infoUpdate(`Skipping Audyssey microphone calibration file for ${name}...`);
           await genSub(i); // response copy; applying _micCal produces 2x IR samples and affects AF in directional on cirrus logic
         }
         else {
@@ -1679,7 +1680,8 @@
         await fetch_mREW(mCount + i, 'PUT', { title: name });
       }
       console.infoUpdate("Deleting processed measurements...");
-      for (let i = mCount; i >= 1; i--) {
+      for (let i = mCount; i > 0; i--) {
+        console.infoUpdate(`Deleting processed measurements... remaining: ${i}`);
         await postDelete(i);
       }
       console.infoUpdate("Completed applying Audyssey microphone calibration file to measurements.");
@@ -1864,8 +1866,7 @@
           await enableRoomCurve();
         }
         await fetchSafe('target-level', 1, 75.0);
-        const targetCurve = await postNext('Generate target measurement', 1);
-        const targetCurveIdx = Object.keys(targetCurve.results)[0];
+        const targetCurveIdx = await postNext('Generate target measurement', 1);
         targetResponse = await fetchSafe(`frequency-response?smoothing=1%2F48&ppo=96`, targetCurveIdx);
         Object.freeze(targetResponse); // ensure it doesn't change once optimization starts
         await postDelete(targetCurveIdx);
@@ -2052,7 +2053,7 @@
       console.infoUpdate(`Spatially averaged all channels.`);
       console.info("Deleting processed measurements...");
       for (let i = mCount; i > 0; i--) {
-        console.infoUpdate(`Deleting processed measurements... (${mCount - i + 1}/${mCount})`);
+        console.infoUpdate(`Deleting processed measurements... remaining: ${i}`);
         await postDelete(i);
       }
       console.infoUpdate("Deleted processed measurements.");
@@ -2299,8 +2300,7 @@
     async function getUserCustomizations(idx, cmdId) {
       // this function adds in any user customizations such as DE, PEQ etc.
       await clearFilters(idx); // should be mlp measurement and already blank
-      const baseFilter = await postNext('Generate filters measurement', idx);
-      const baseFilterIdx = Object.keys(baseFilter.results)[0];
+      const baseFilterIdx = await postNext('Generate filters measurement', idx);
       if (cmdId === "C" && dialogueEnhancer) { await addDEFilter(baseFilterIdx); }
       if (!cmdId.startsWith("SW")) { await addGlobalSpeakerFilters(baseFilterIdx); }
       // add in PEQs from the table(s)
@@ -2337,8 +2337,7 @@
         }
       }
       // combine custom filters with autoEQ filters
-      const customFilter = await postNext("Generate filters measurement", idx);
-      const customFilterIdx = Object.keys(customFilter.results)[0];
+      const customFilterIdx = await postNext("Generate filters measurement", idx);
       await postNext("Arithmetic", [baseFilterIdx, customFilterIdx], {function: "A * B"});
       await postDelete(customFilterIdx);
       await postDelete(baseFilterIdx);
@@ -2346,15 +2345,13 @@
     }
     async function getUHFFilter(idxWithEQ, targetCurveIdx) {
       // returns min. phase filter for knocking down any ultra high frequency peaks
-      const tempEQSpeaker = await postNext('Generate predicted measurement', idxWithEQ);
-      const tempEQSpeakerIdx = Object.keys(tempEQSpeaker.results)[0];
+      const tempEQSpeakerIdx = await postNext('Generate predicted measurement', idxWithEQ);
       const volAdjust = 75.0 - await fetchSafe("target-level", idxWithEQ);
       await postNext('Add SPL offset', tempEQSpeakerIdx, { offset: volAdjust });
-      const UHFFilter = await postNext('Arithmetic', [targetCurveIdx, tempEQSpeakerIdx],
-                                    { function: "A / B", // magnitude only can produce artifacts
-                                      maxGain: 0, lowerLimit: 10000, upperLimit: 25000});
+      const UHFFilterIdx = await postNext('Arithmetic', [targetCurveIdx, tempEQSpeakerIdx],
+                                        { function: "A / B", // magnitude only can produce artifacts
+                                          maxGain: 0, lowerLimit: 10000, upperLimit: 25000});
       // convert to minimum phase
-      const UHFFilterIdx = Object.keys(UHFFilter.results)[0];
       await postNext('Minimum phase version', UHFFilterIdx, {
         "include cal": true,
         "append lf tail": false,
@@ -2368,8 +2365,7 @@
     }
     async function generateREWFilters() {
       console.log(`Generating min. phase EQ filters...`);
-      const targetCurve = await postNext('Generate target measurement', 1); // used for fixing UHF peaks
-      const targetCurveIdx = Object.keys(targetCurve.results)[0];
+      const targetCurveIdx = await postNext('Generate target measurement', 1); // used for fixing UHF peaks
       await postNext('Smooth', targetCurveIdx, { smoothing: "Var" });
       for (let i = 1; i <= nChannels; i++) {
         console.info(`${commandId[i].padStart(3, ".")} - equalizing channel...`);
@@ -2402,8 +2398,7 @@
         // cleanup EQ params
         await postSafe(`${baseUrl}/${avgIdx}/target-settings`, { shape: "None" }, "Update processed");
         // generate auto-EQ filters
-        const filter = await postNext('Generate filters measurement', avgIdx);
-        const filterIdx = Object.keys(filter.results)[0];
+        const filterIdx = await postNext('Generate filters measurement', avgIdx);
         if (!isSub) {
           // fix any ultra high frequency peaks that remain after using high shelf; avgIdx has auto-EQ filters
           const speakerUHFFilterIdx = await getUHFFilter(avgIdx, targetCurveIdx);
@@ -2423,11 +2418,9 @@
         await postNext('Add SPL offset', filterIdx, { offset: -ALOffset });
         // generate predicted equalized responses using the auto leveled filter
         // note: using AL-ed filter helps sanity check that AL comp works as expected on predicted results
-        const mlpEqResponse = await postNext('Arithmetic', [mlpIdx, filterIdx], {function: "A * B"});
-        const mlpEqResponseIdx = Object.keys(mlpEqResponse.results)[0];
+        const mlpEqResponseIdx = await postNext('Arithmetic', [mlpIdx, filterIdx], {function: "A * B"});
         await fetch_mREW(mlpEqResponseIdx, 'PUT', { title: `${commandId[i]}-mlp-equalized` });
-        const eqResponse = await postNext('Arithmetic', [avgIdx, filterIdx], {function: "A * B"});
-        const eqResponseIdx = Object.keys(eqResponse.results)[0];
+        const eqResponseIdx = await postNext('Arithmetic', [avgIdx, filterIdx], {function: "A * B"});
         await fetch_mREW(eqResponseIdx, 'PUT', { title: `${commandId[i]}-avg-equalized` });
         // compensate equalized response & trims for auto level
         let logUpdate = `${commandId[i].padStart(3, ".")} - equalized`;
@@ -2461,8 +2454,7 @@
       console.log("Generating target curves for each channel...");
       // generate target curve at 0dB
       await fetchSafe('target-level', 1, 0.0);
-      const targetCurve = await postNext('Generate target measurement', 1);
-      const targetCurveIdx = Object.keys(targetCurve.results)[0];
+      const targetCurveIdx = await postNext('Generate target measurement', 1);
       // add in user customizations and generate the target curve for each channel
       for (let i = 1; i <= nChannels; i++) {
         console.info(`${commandId[i].padStart(3, ".")} - generating target curve...`);
@@ -2622,8 +2614,7 @@
         let idx = spIdx;
         if (!singleChannel) {
           const spIdxR = cmdIdAVGIndices[commandId[i + 1]]
-          const pairAvg = await postNext('Magn plus phase average', [spIdx, spIdxR]); // do not use VA. it unfairly benefits single channel speakers
-          idx = Object.keys(pairAvg.results)[0];
+          idx = await postNext('Magn plus phase average', [spIdx, spIdxR]); // do not use VA. it unfairly benefits single channel speakers
         }
         const rolloff = await getAbsLow3dBPoint(idx, false, 20);
         let initialXO = findNearestXO(rolloff + 15); // look for initial XO that's ~15hz above roll-off
@@ -2692,8 +2683,7 @@
         mlpSPIndices.push(cmdIdMLPIndices[commandId[i]]);
       }
       // prepare "average" speaker
-      const avgSpeaker = await postNext('Magn plus phase average', Array.from(mlpSPIndices));
-      const avgSpeakerIdx = Object.keys(avgSpeaker.results)[0]
+      const avgSpeakerIdx = await postNext('Magn plus phase average', Array.from(mlpSPIndices));
       // prepare subwoofer
       const measurements = await fetch_mREW();
       const mCount = Object.keys(measurements).length;
@@ -2827,8 +2817,7 @@
         let mlpSPIdx = cmdIdMLPIndices[commandId[i]];
         if (!singleChannel) {
           const mlpSPIdxR = cmdIdMLPIndices[commandId[i + 1]];
-          const pairSPAvg = await postNext('Magn plus phase average', [mlpSPIdx, mlpSPIdxR]); // do not use VA. it unfairly benefits single channel speakers
-          mlpSPIdx = Object.keys(pairSPAvg.results)[0];
+          mlpSPIdx = await postNext('Magn plus phase average', [mlpSPIdx, mlpSPIdxR]); // do not use VA. it unfairly benefits single channel speakers
         }
         let bestXO = initialXO, minAvgDip = Infinity; // initialize
         console.info("Starting...");
@@ -2859,10 +2848,8 @@
       }
     }
     async function addSub2Speaker(spIdx, swIdx, xo) {
-      const spWithHPF = await genSpeaker(spIdx, xo);
-      const spWithHPFIdx = Object.keys(spWithHPF.results)[0];
-      const subWithLPF = await genSub(swIdx, xo);
-      const subWithLPFIdx = Object.keys(subWithLPF.results)[0];
+      const spWithHPFIdx = await genSpeaker(spIdx, xo);
+      const subWithLPFIdx = await genSub(swIdx, xo);
       await postNext('Arithmetic', [spWithHPFIdx, subWithLPFIdx], { function: "A + B" });
       await postDelete(subWithLPFIdx);
       await postDelete(spWithHPFIdx); // final response now at spWithHPFIdx
@@ -2882,14 +2869,12 @@
             // generate LFEfinal-mlp
             console.infoUpdate("Generating final output for LFE-mlp...");
             let eqSubwoofer = cmdIdMLPIndicesEQ[commandId[i]];
-            let LFEChannel = await genSub(eqSubwoofer, 120);
-            let LFEChannelIdx = Object.keys(LFEChannel.results)[0];
+            let LFEChannelIdx = await genSub(eqSubwoofer, 120);
             await fetch_mREW(LFEChannelIdx, 'PUT', { title: "LFEfinal-mlp-120hz-LPF" });
             // generate LFEfinal-avg
             console.infoUpdate("Generating final output for LFE-avg...");
             eqSubwoofer = cmdIdAVGIndicesEQ[commandId[i]];
-            LFEChannel = await genSub(eqSubwoofer, 120);
-            LFEChannelIdx = Object.keys(LFEChannel.results)[0];
+            LFEChannelIdx = await genSub(eqSubwoofer, 120);
             await fetch_mREW(LFEChannelIdx, 'PUT', { title: "LFEfinal-avg-120hz-LPF" });
             continue; // done
           }
@@ -2926,8 +2911,7 @@
         }
       }
       await fetchSafe('target-level', 1, 75.0);
-      const targetCurve = await postNext('Generate target measurement', 1);
-      const targetCurveIdx = Object.keys(targetCurve.results)[0];
+      const targetCurveIdx = await postNext('Generate target measurement', 1);
       const targetName = (targetCurveName === "" ? "TC-DEQ" : targetCurveName) + " @ 75dB";
       await fetch_mREW(targetCurveIdx, 'PUT', { title: targetName });
       // room curve no longer needed. keeping it enabled will only confuse on next run
@@ -2969,8 +2953,7 @@
     }
     async function getFirstIRPeak(idx, start=20, end=120) {
       // finds the time in seconds of the first IR peak that exceeds the standard deviation of the IR
-      const bandpassedResponse = await genBandpassedResponse(idx, start, end); // reduces noise that can mask group delay
-      const bandpassedResponseIdx = Object.keys(bandpassedResponse.results)[0];
+      const bandpassedResponseIdx = await genBandpassedResponse(idx, start, end); // reduces noise that can mask group delay
       // use FDW to clean up noisy/jittery IR
       await postSafe(`http://localhost:4735/measurements/${bandpassedResponseIdx}/ir-windows`, { addFDW: "true", fdwWidthCycles: "15" }, "Update processed");
       const response = await fetchSafe('impulse-response?unit=percent&windowed=true&normalised=true&samplerate=48000', bandpassedResponseIdx);
@@ -3041,8 +3024,7 @@
         const mlpIdx = cmdIdIndices[commandId[i]][0];
         swCmdIdsWithFirstIRPeak[commandId[i]] = await getFirstIRPeak(mlpIdx);
         // generate excess phase response and use it for alignment
-        const mlpEPResponse = await genExcessPhaseResponse(mlpIdx);
-        const mlpEPResponseIdx = Object.keys(mlpEPResponse.results)[0];
+        const mlpEPResponseIdx = await genExcessPhaseResponse(mlpIdx);
         swCmdIdsWithEPResponseIndices[commandId[i]] = mlpEPResponseIdx;
         await fetch_mREW(mlpEPResponseIdx, 'PUT', { title: measurements[mlpIdx].title }); // reuse same name
       }
@@ -3114,8 +3096,7 @@
       for (let i = 0; i < swIndices[0].length; i++) { // iterate over positions
         console.infoUpdate(`Generating combined subwoofer response for position #${i + 1}`);
         const iPosSWIdxs = swIndices.map(row => row[i]);
-        const iPosCombinedSW = await postNext('Vector sum', iPosSWIdxs); // combine subwoofers
-        const iPosCombinedSWIdx = Object.keys(iPosCombinedSW.results)[0];
+        const iPosCombinedSWIdx = await postNext('Vector sum', iPosSWIdxs); // combine subwoofers
         const [iPosCombinedSWLeftWindow, iPosCombinedSWRightWindow] = await getMaxIRWindow(iPosSWIdxs); // apply maximum aggregate IR window
         await postSafe(`${baseUrl}/${iPosCombinedSWIdx}/ir-windows`, { leftWindowWidthms: iPosCombinedSWLeftWindow,
                                                                       rightWindowWidthms: iPosCombinedSWRightWindow }, "Update processed");
@@ -3142,7 +3123,7 @@
       console.info("Cleaning up individual subwoofer response(s)...");
       const individualSWIndices = swIndices.flat().sort(function(a, b) { return a - b; });
       for (let i = individualSWIndices.length - 1; i >= 0; i--) {
-        console.infoUpdate(`Cleaning up individual subwoofer response(s)... (${individualSWIndices.length - i}/${individualSWIndices.length})`);
+        console.infoUpdate(`Cleaning up individual subwoofer response(s)... remaining: ${i + 1}`);
         await postDelete(individualSWIndices[i]);
       }
       console.infoUpdate("Cleaned up individual subwoofer response(s).");
@@ -3362,14 +3343,20 @@
       await postSafe("http://localhost:4735/alignment-tool/delay-b", requiredDelay, "Value set");
       await postSafe("http://localhost:4735/alignment-tool/invert-b", isInverted, "Value set");
       const alignedSum = await postAlign('Aligned sum');
-      const parsed = JSON.parse(alignedSum.message);
-      const sumIndex = Object.keys(parsed.results)[0];
+      const parsedMessage = JSON.parse(alignedSum.message);
+      const sumIndex = Object.keys(parsedMessage.results)[0];
       return [requiredDelay, isInverted, sumIndex];
+    }
+    async function responseCopy(idx) {
+      const rpCopy = await postSafe(`${baseUrl}/${idx}/command`, { command: "Response copy" }, "Completed");
+      const parsedMessage = JSON.parse(rpCopy.message);
+      const rpCopyIdx = Object.keys(parsedMessage.results)[0];
+      return rpCopyIdx;
     }
     async function genSub(i, freq) {
       // if no freq provided, just copy response
       if (!freq) {
-        return await postSafe(`${baseUrl}/${i}/command`, { command: "Response copy" }, "Completed");
+        return await responseCopy(i);
       }
       await postSafe(`${baseUrl}/${i}/filters`, {
         filters: [{
@@ -3387,7 +3374,7 @@
     async function genSpeaker(i, freq) {
       // if no freq provided, just copy response
       if (!freq) {
-        return await postSafe(`${baseUrl}/${i}/command`, { command: "Response copy" }, "Completed");
+        return await responseCopy(i);
       }
       await postSafe(`${baseUrl}/${i}/filters`, {
         filters: [{
@@ -3709,6 +3696,9 @@
       try {
         const data = await fetchData();
         const result = await checkResponse(data);
+        if (Object.hasOwn(result, "results")) {
+          return Object.keys(result.results)[0]; // return idx of resulting measurement
+        }
         return result;
       } catch (error) {
         throw new Error('Error fetching result:', error);
