Fix PEQ section tab behavior (#56)
* remove unnecessary and overcomplicated tabbing

* add logic to organize tabs to cycle through rows and then go to next column

* minor update to first IR peak calculation

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -1144,8 +1144,9 @@
           updateFilterChain(idPrefix);
         });
       });
-
+      updateFilterChain(globalSpeakerPrefix.toLowerCase()); // for all speakers
       commandId.slice(1).forEach(p => updateFilterChain(p.toLowerCase()));
+      organizeTabs(); // so that when user presses tab button, it cycles through the rows first, then columns
     }
 
     function updateInputStates(select) {
@@ -1194,10 +1195,6 @@
 
     function updateFilterChain(idPrefix) {
       const filtersPerSpeaker = 20;
-      const spkUpper = idPrefix.toUpperCase();
-      const pos = Array.isArray(commandId) ? commandId.indexOf(spkUpper) : -1;
-      const base = pos > 0 ? (pos - 1) * (filtersPerSpeaker * 4) : 0;
-      let tabIndex = base + 1;
 
       for (let i = 1; i <= filtersPerSpeaker; i++) {
         const typeEl = document.getElementById(`${idPrefix}Type${i}`);
@@ -1205,7 +1202,7 @@
         const gainEl = document.getElementById(`${idPrefix}Gain${i}`);
         const qEl    = document.getElementById(`${idPrefix}Q${i}`);
 
-        if (!typeEl) continue;
+        if (!typeEl) continue; // global ends at 15
 
         if (i === 1) {
           typeEl.disabled = false;
@@ -1227,19 +1224,23 @@
             updateInputStates(typeEl);
           }
         }
-
-        if (typeEl) typeEl.tabIndex = tabIndex++;
-        if (freqEl) freqEl.tabIndex = tabIndex++;
-        if (gainEl) gainEl.tabIndex = tabIndex++;
-        if (qEl)    qEl.tabIndex    = tabIndex++;
       }
     }
 
-    // TODO: figure out what it does and if this is necessary
-    document.addEventListener("DOMContentLoaded", () => {
-      const filtersPerSpeaker = 20;
+    function organizeTabs() {
       let tabIndex = 1;
+      const globalP = globalSpeakerPrefix.toLowerCase();
+      for (let i = 1; i <= globalSpeakerFilters; i++) {
+        const typeEl = document.getElementById(`${globalP}Type${i}`);
+        const freqEl = document.getElementById(`${globalP}Freq${i}`);
+        const gainEl = document.getElementById(`${globalP}Gain${i}`);
+        const qEl    = document.getElementById(`${globalP}Q${i}`);
 
+        [typeEl, freqEl, gainEl, qEl].forEach(el => {
+          if (el) el.setAttribute("tabindex", tabIndex++);
+        });
+      }
+      const filtersPerSpeaker = 20;
       commandId.slice(1).forEach(prefix => {
         const idPrefix = prefix.toLowerCase();
         for (let i = 1; i <= filtersPerSpeaker; i++) {
@@ -1253,7 +1254,8 @@
           });
         }
       });
-    });
+    }
+
     function populateCustomFilterTable() {
       // ============================
       // Creat Dynamic Speaker PEQ based on ADY upload
@@ -2950,7 +2952,7 @@
       const variance = squaredDifferences.reduce((sum, value) => sum + value, 0) / array.length;
       return Math.sqrt(variance);
     }
-    async function getFirstIRPeak(idx, start=20, end=120) {
+    async function getFirstIRPeak(idx, start=10, end=320) {
       // finds the time in seconds of the first IR peak that exceeds the standard deviation of the IR
       const bandpassedResponseIdx = await genBandpassedResponse(idx, start, end); // reduces noise that can mask group delay
       // use FDW to clean up noisy/jittery IR
